src/tui/snapshots/vigil__tui__tests__tests__snapshot_chat_empty.snap
---
source: src/tui/tests.rs
expression: output
---
  ◉ VIGIL · chat                                                                
────────────────────────────────────────────────────────────────────────────────
            Chat with Vigil to dispatch workers and manage sessions…            
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
────────────────────────────────────────────────────────────────────────────────
  › _                                                                      Esc B
