src/tui/snapshots/vigil__tui__tests__tests__snapshot_quit_confirmation.snap
---
source: src/tui/tests.rs
expression: output
---
  ◉ VIGIL                                                    2 active · 0 blocke
────────────────────────────────────────────────────────────────────────────────
▌ ●  abcd  my-project            running                                        
  ●  efgh  my-project            running                                        
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                    2 sessions still running. Quit anyway? y                    
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ↑↓ Navigate   ⏎ Open   c Chat   ? Help   q Quit
