src/tui/snapshots/vigil__tui__tests__tests__snapshot_session_list_empty.snap
---
source: src/tui/tests.rs
expression: output
---
  ◉ VIGIL                                                    0 active · 0 blocke
────────────────────────────────────────────────────────────────────────────────
                No sessions running. Press c to chat with Vigil…                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ↑↓ Navigate   ⏎ Open   c Chat   ? Help   q Quit
