src/tui/snapshots/vigil__tui__tests__tests__snapshot_session_list_with_sessions.snap
---
source: src/tui/tests.rs
expression: output
---
  ◉ VIGIL                                                    1 active · 1 blocke
────────────────────────────────────────────────────────────────────────────────
▌ ●  abcd  my-project            running                                        
  ⚠  efgh  my-project            needsinput                                     
  ✓  ijkl  my-project            completed                                      
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ↑↓ Navigate   ⏎ Open   c Chat   ? Help   q Quit
