src/tui/snapshots/vigil__tui__tests__tests__snapshot_setup_view.snap
---
source: src/tui/tests.rs
expression: output
---
  ◉ VIGIL                                                                       
                                                                                
  First-time setup                                                              
                                                                                
▌  Install ultrapowers plugin (recommended)                                     
                                                                                
                                                                                
   Already installed — verify                                                   
                                                                                
                                                                                
   Skip setup                                                                   
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ↑↓ Navigate   ⏎ Select
