src/tui/snapshots/vigil__tui__tests__tests__snapshot_terminal_empty_panes.snap
---
source: src/tui/tests.rs
expression: output
---
                  No terminal panes open. Press Esc to go back…
